--- a/1.Workshop/index.html
+++ b/1.Workshop/index.html
@@ -48,7 +48,7 @@
         <div>
           <h4>Which option best describes your current role?</h4>
           <select name="role" id="role" aria-placeholder="Select current role">
-            <option value="placeholder" selected>Select current role</option>
+            <option disabled selected value>Select current role</option>
             <option value="first">Role 1</option>
             <option value="second">Role 2</option>
             <option value="third">Role 3</option>
@@ -71,6 +71,7 @@
         <div>
           <h4>What is your favorite feature of Clarusway?</h4>
           <select name="favorite" id="favorite">
+            <option disabled selected value>Select an option</option>
             <option value="placeholder" selected>Select an option</option>  
             <option value="favorite1">Favorite1</option>
             <option value="favorite2">Favorite2</option>
